# LeetGPU

./: CMakeLists.txt  build.sh  build_deps.sh  format.sh
test/: test_11.cu
test/easy/: test_matrix_multiplication.cu  test_vector_addition.cu
test/hard/: test_multi_head_attention.cu
